...
            android:id="@+id/toolbar"
            style="@style/Toolbar.Base"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/title"
                style="@style/Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

...
            <android.view.View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rate_driver_divider_height"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textTncCard"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_horizontal_margin"
                android:textColor="@color/users_name_in_settings"
...
