...
    <string name="last_name_special_chars_error">Please write your last name in English</string>
    <string name="middle_name_special_chars_error">Please write your middle name in English</string>
    <string name="select">Select</string>
    <string name="error_driver_photo_upload_failed">Uploading driver photo failed, do you want to retry?</string>
    <string name="ride_app">Ride %s</string>
    <string name="update_documents">Update Documents</string>
    <string name="documents">Documents</string>
    <string name="need_help">Need Help? Contact us.</string>
    <string name="need_help_message_documents">Need help on documents</string>
    <string name="select_email_application_message">Select email application…</string>
    <string name="title_insurance">Insurance</string>

    <!-- driver sign up -->
...
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
...
